node_firmware/build/log/idf_py_stdout_output_16960
[1/9] Performing build step for 'bootloader'
[1/1] cmd.exe /C "cd /D "D:\nipun prev laptop\final_year\idf_files\node_firmware\build\bootloader\esp-idf\esptool_py" && D:\Espressif\python_env\idf5.0_py3.11_env\Scripts\python.exe D:/Espressif/frameworks/esp-idf-v5.0.1/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 "D:/nipun prev laptop/final_year/idf_files/node_firmware/build/bootloader/bootloader.bin""
Bootloader binary size 0x6710 bytes. 0x8f0 bytes (8%) free.
[2/7] Building C object esp-idf/mq2/CMakeFiles/__idf_mq2.dir/mq2.c.obj
FAILED: esp-idf/mq2/CMakeFiles/__idf_mq2.dir/mq2.c.obj 
ccache D:\Espressif\tools\xtensa-esp32-elf\esp-2022r1-11.2.0\xtensa-esp32-elf\bin\xtensa-esp32-elf-gcc.exe  -I"D:/nipun prev laptop/final_year/idf_files/node_firmware/build/config" -I"D:/nipun prev laptop/final_year/idf_files/node_firmware/components/mq2/include" -ID:/Espressif/frameworks/esp-idf-v5.0.1/components/newlib/platform_include -ID:/Espressif/frameworks/esp-idf-v5.0.1/components/freertos/FreeRTOS-Kernel/include -ID:/Espressif/frameworks/esp-idf-v5.0.1/components/freertos/esp_additions/include/freertos -ID:/Espressif/frameworks/esp-idf-v5.0.1/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -ID:/Espressif/frameworks/esp-idf-v5.0.1/components/freertos/esp_additions/include -ID:/Espressif/frameworks/esp-idf-v5.0.1/components/esp_hw_support/include -ID:/Espressif/frameworks/esp-idf-v5.0.1/components/esp_hw_support/include/soc -ID:/Espressif/frameworks/esp-idf-v5.0.1/components/esp_hw_support/include/soc/esp32 -ID:/Espressif/frameworks/esp-idf-v5.0.1/components/esp_hw_support/port/esp32/. -ID:/Espressif/frameworks/esp-idf-v5.0.1/components/esp_hw_support/port/esp32/private_include -ID:/Espressif/frameworks/esp-idf-v5.0.1/components/heap/include -ID:/Espressif/frameworks/esp-idf-v5.0.1/components/log/include -ID:/Espressif/frameworks/esp-idf-v5.0.1/components/soc/include -ID:/Espressif/frameworks/esp-idf-v5.0.1/components/soc/esp32/. -ID:/Espressif/frameworks/esp-idf-v5.0.1/components/soc/esp32/include -ID:/Espressif/frameworks/esp-idf-v5.0.1/components/hal/esp32/include -ID:/Espressif/frameworks/esp-idf-v5.0.1/components/hal/include -ID:/Espressif/frameworks/esp-idf-v5.0.1/components/hal/platform_port/include -ID:/Espressif/frameworks/esp-idf-v5.0.1/components/esp_rom/include -ID:/Espressif/frameworks/esp-idf-v5.0.1/components/esp_rom/include/esp32 -ID:/Espressif/frameworks/esp-idf-v5.0.1/components/esp_rom/esp32 -ID:/Espressif/frameworks/esp-idf-v5.0.1/components/esp_common/include -ID:/Espressif/frameworks/esp-idf-v5.0.1/components/esp_system/include -ID:/Espressif/frameworks/esp-idf-v5.0.1/components/esp_system/port/soc -ID:/Espressif/frameworks/esp-idf-v5.0.1/components/esp_system/port/include/private -ID:/Espressif/frameworks/esp-idf-v5.0.1/components/xtensa/include -ID:/Espressif/frameworks/esp-idf-v5.0.1/components/xtensa/esp32/include -ID:/Espressif/frameworks/esp-idf-v5.0.1/components/lwip/include -ID:/Espressif/frameworks/esp-idf-v5.0.1/components/lwip/include/apps -ID:/Espressif/frameworks/esp-idf-v5.0.1/components/lwip/include/apps/sntp -ID:/Espressif/frameworks/esp-idf-v5.0.1/components/lwip/lwip/src/include -ID:/Espressif/frameworks/esp-idf-v5.0.1/components/lwip/port/esp32/include -ID:/Espressif/frameworks/esp-idf-v5.0.1/components/lwip/port/esp32/include/arch -ID:/Espressif/frameworks/esp-idf-v5.0.1/components/driver/include -ID:/Espressif/frameworks/esp-idf-v5.0.1/components/driver/deprecated -ID:/Espressif/frameworks/esp-idf-v5.0.1/components/driver/esp32/include -ID:/Espressif/frameworks/esp-idf-v5.0.1/components/esp_pm/include -ID:/Espressif/frameworks/esp-idf-v5.0.1/components/esp_ringbuf/include -ID:/Espressif/frameworks/esp-idf-v5.0.1/components/esp_timer/include -I"D:/nipun prev laptop/final_year/idf_files/node_firmware/components/ads1115/include" -ID:/Espressif/frameworks/esp-idf-v5.0.1/components/esp_adc/include -ID:/Espressif/frameworks/esp-idf-v5.0.1/components/esp_adc/interface -ID:/Espressif/frameworks/esp-idf-v5.0.1/components/esp_adc/esp32/include -ID:/Espressif/frameworks/esp-idf-v5.0.1/components/esp_adc/deprecated/include -ID:/Espressif/frameworks/esp-idf-v5.0.1/components/efuse/include -ID:/Espressif/frameworks/esp-idf-v5.0.1/components/efuse/esp32/include -mlongcalls -Wno-frame-address  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og "-fmacro-prefix-map=D:/nipun prev laptop/final_year/idf_files/node_firmware=." -fmacro-prefix-map=D:/Espressif/frameworks/esp-idf-v5.0.1=/IDF -fstrict-volatile-bitfields -Wno-error=unused-but-set-variable -fno-jump-tables -fno-tree-switch-conversion -DconfigENABLE_FREERTOS_DEBUG_OCDAWARE=1 -std=gnu17 -Wno-old-style-declaration -D_GNU_SOURCE -DIDF_VER=\"v5.0.1-dirty\" -DESP_PLATFORM -D_POSIX_READER_WRITER_LOCKS -MD -MT esp-idf/mq2/CMakeFiles/__idf_mq2.dir/mq2.c.obj -MF esp-idf\mq2\CMakeFiles\__idf_mq2.dir\mq2.c.obj.d -o esp-idf/mq2/CMakeFiles/__idf_mq2.dir/mq2.c.obj -c "D:/nipun prev laptop/final_year/idf_files/node_firmware/components/mq2/mq2.c"
In file included from D:/nipun prev laptop/final_year/idf_files/node_firmware/components/mq2/mq2.c:2:
D:/Espressif/frameworks/esp-idf-v5.0.1/components/driver/deprecated/driver/adc.h:19:2: warning: #warning "legacy adc driver is deprecated, please migrate to use esp_adc/adc_oneshot.h and esp_adc/adc_continuous.h for oneshot mode and continuous mode drivers respectively" [-Wcpp]
   19 | #warning "legacy adc driver is deprecated, please migrate to use esp_adc/adc_oneshot.h and esp_adc/adc_continuous.h for oneshot mode and continuous mode drivers respectively"
      |  ^~~~~~~
In file included from D:/nipun prev laptop/final_year/idf_files/node_firmware/components/mq2/mq2.c:13:
D:/Espressif/frameworks/esp-idf-v5.0.1/components/esp_adc/deprecated/include/esp_adc_cal.h:17:2: warning: #warning "legacy adc calibration driver is deprecated, please migrate to use esp_adc/adc_cali.h and esp_adc/adc_cali_scheme.h" [-Wcpp]
   17 | #warning "legacy adc calibration driver is deprecated, please migrate to use esp_adc/adc_cali.h and esp_adc/adc_cali_scheme.h"
      |  ^~~~~~~
D:/nipun prev laptop/final_year/idf_files/node_firmware/components/mq2/mq2.c: In function 'battery_get_voltage_task':
D:/nipun prev laptop/final_year/idf_files/node_firmware/components/mq2/mq2.c:172:23: error: format '%f' expects argument of type 'double', but argument 2 has type 'int' [-Werror=format=]
  172 |         printf("lpg: %f", MQGetGasPercentage(MQRead(MQ_PIN)/Ro,GAS_LPG));
      |                      ~^   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
      |                       |   |
      |                       |   int
      |                       double
      |                      %d
D:/nipun prev laptop/final_year/idf_files/node_firmware/components/mq2/mq2.c:173:23: error: format '%f' expects argument of type 'double', but argument 2 has type 'int' [-Werror=format=]
  173 |         printf("CO : %f", MQGetGasPercentage(MQRead(MQ_PIN)/Ro,GAS_CO));
      |                      ~^   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
      |                       |   |
      |                       |   int
      |                       double
      |                      %d
D:/nipun prev laptop/final_year/idf_files/node_firmware/components/mq2/mq2.c:174:28: error: format '%f' expects argument of type 'double', but argument 2 has type 'int' [-Werror=format=]
  174 |         printf("gas smoke %f", MQGetGasPercentage(MQRead(MQ_PIN)/Ro,GAS_SMOKE));
      |                           ~^   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
      |                            |   |
      |                            |   int
      |                            double
      |                           %d
cc1.exe: some warnings being treated as errors
ninja: build stopped: subcommand failed.
